# ai-prompts-manager

./: .gitattributes  .gitignore  README.md  RELEASE_NOTES.md  RELEASE_NOTES.txt  RELEASE_NOTES_PROMPTS.txt  SETUP_GITHUB.md  TODO.md  bet-pillar-main.json  jest.config.js  package-lock.json  package.json  project-manager.py
.github/workflows/: release.yml  test.yml
.tauri/: keys  keys.pub
docs/: 01-OVERVIEW.md  02-FRONTEND.md  03-BACKEND.md  04-CLAUDE.md  05-FEATURES.md  06-ADDITIONAL-WEBVIEWS.md  INDEX.md
docs/frontend/: APPSTATE.md  CLAUDE-API.md  DATA-STRUCTURES.md  EMBEDDED-SCRIPTS.md  INDEX-HTML-API.md  INDEX-HTML.md  TABS-BLOCKS.md  UTILS.md  WORKFLOW.md
project-manager/: bet-addcl.json  bet-pillar-clkeys.json  bet-pillar-main.json  gamble-mirror.json  gamble-pillar-main.json  project-manager.py
prompts/: ausslot-renewal.json  bet-addcl.json  bet-clusters.json  bet-linkbuilding.json  bet-pillar-clkeys.json  bet-pillar-default.json  bet-pillar-main.json  bet-pillar.json  bet-sportwetten.json  bet-wm2026-nolinks.json  bet-wm2026.json  gamble-brand-review.json  gamble-mini-fill.json  gamble-mini-generation.json  gamble-mini-research.json  gamble-mini-reviews-1.json  gamble-mirror-nogeo.json  gamble-mirror-packs.json  gamble-mirror.json  gamble-pillar-main.json  gamble-test.json  igaming.json  livetv-categories.json  livetvsx.json  manifest.json  nonregservices.json  sportwetten.json  test-pillar-skills.json
skills/: content-technical.skill  content-writing-style.skill  html-page-design.skill  logo-and-branding.skill  manifest.json  quality-audit.skill
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  remote-claude.json
src-tauri/scripts/: claude_autocontinue.js  claude_counter.css  claude_counter.js  claude_helpers.js  selectors.json  serp_extract.js
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: app.rs  attachments.rs  auth.rs  claude.rs  downloads.rs  logs.rs  mod.rs  scraper.rs  storage.rs  toolbar.rs
src-tauri/src/downloads/: mod.rs  paths.rs
src-tauri/src/utils/: dimensions.rs  mime.rs  mod.rs  platform.rs
src-tauri/src/webview/: manager.rs  mod.rs  scripts.rs
tests/: README.md  setup.js
(+26 files in other folders)
