[package]
name = "ai-prompts-manager"
version = "3.4.4"
description = "AI Prompts Manager App"
authors = ["Wicked"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
