[package]
name = "ai-prompts-manager"
version = "4.2.5"
description = "AI Prompts Manager App"
authors = ["Wicked"]
edition = "2021"

[lib]
name = "ai_prompts_manager"
path = "src/lib.rs"

[[bin]]
name = "ai-prompts-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
chrono = "0.4"
urlencoding = "2"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Foundation", "Win32_System_LibraryLoader"] }
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.61", features = ["Win32_System_Com"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
